<fix>[home]: corrige scrollbar das tags

--- a/front-end/src/pages/home.css
+++ b/front-end/src/pages/home.css
@@ -39,7 +39,8 @@
 }
 .home-tags{
     height: 3rem;
-    overflow:auto;
+    overflow-y: hidden;
+    overflow-x: auto;
 }
 
 .master{
